test/sema/positive/address02.impala
extern "C" {
    fn foo(&int) -> ();
}

fn main() -> () {
    let mut i: int = 42;
    foo(&i)
}
